[tool.poetry]
name = "urlshortener"
version = "0.1.0"
description = "A project to short url"
authors = ["Akemid"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.1"
validators = "^0.22.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.109.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
